[package]
name = "sandbox_process"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true  
opt-level = "z" 
lto = true
codegen-units = 1

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }

[target.'cfg(windows)'.dependencies.windows]
version = "0.32.0"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_SystemServices"
]
